--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseConfiguration": {
+    "DatabasePath": "d:/Code/Data",
+    "DatabaseName": "Database",
+    "DocumentsPath": "Documents"
+  }
 }
