Using appSettings and API call for the Patient Creation

--- a/src/Clinic.Api/appsettings.json
+++ b/src/Clinic.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",  
+  "DatabaseConfigurations": {
+    "DatabasePath": "d:/Code/Data",
+    "DatabaseName": "Database.db",
+    "DocumentsPath": "Documents"
+  }
 }
