--- a/src/Clinic.Api/appsettings.json
+++ b/src/Clinic.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "DatabaseConfigurations": {
-    "DatabasePath": "d:/Code/Data",
-    "DatabaseName": "Database.db",
-    "DocumentsPath": "Documents"
+    "DatabasePath": "",
+    "DatabaseName": "",
+    "DocumentsPath": ""
   }
 }
