--- a/src/Presentation/Properties/launchSettings.json
+++ b/src/Presentation/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:6190;http://localhost:5193",
+      "applicationUrl": "http://localhost:6190;http://localhost:5193",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
