--- a/src/Clinic.Api/appsettings.json
+++ b/src/Clinic.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "DatabaseConfigurations": {
     "DatabasePath": "D:\\Projects\\DoctoApp\\Data\\Code\\Data",
-    "DatabaseName": "Database",
+    "DatabaseName": "Database.db",
     "DocumentsPath": "D:\\Projects\\DoctoApp\\Data\\Code\\Data\\Documents"
   }
 }
