--- a/src/Clinic.Core/Clinic.Core.csproj
+++ b/src/Clinic.Core/Clinic.Core.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-
+      <PackageReference Include="Dapper" Version="2.0.151" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.10" />
     </ItemGroup>
 
     <ItemGroup>
