--- a/src/Clinic.Api/appsettings.json
+++ b/src/Clinic.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "DatabaseConfigurations": {
-    "DatabasePath": "",
-    "DatabaseName": "",
-    "DocumentsPath": ""
+    "DatabasePath": "D:\\Projects\\DoctoApp\\Data\\Code\\Data",
+    "DatabaseName": "Database.db",
+    "DocumentsPath": "D:\\Projects\\DoctoApp\\Data\\Code\\Data\\Documents"
   }
 }
