Using the sql script file to manipulate the Database

--- a/src/Clinic.Api/appsettings.json
+++ b/src/Clinic.Api/appsettings.json
@@ -9,6 +9,8 @@
   "DatabaseConfigurations": {
     "DatabasePath": "",
     "DatabaseName": "",
-    "DocumentsPath": ""
+    "DocumentsPath": "",
+    //The script file will be always moved to solution bin directory as a common location
+    "DatabaseConfigFilePath": "Data\\SqlLiteScripts\\Database.sql"
   }
 }
