--- a/src/Clinic.Core/Clinic.Core.csproj
+++ b/src/Clinic.Core/Clinic.Core.csproj
@@ -21,5 +21,11 @@
         </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Data\SqlLiteScripts\Database.sql">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 
 </Project>
