--- a/src/Clinic.Api/appsettings.json
+++ b/src/Clinic.Api/appsettings.json
@@ -7,10 +7,9 @@
   },
   "AllowedHosts": "*",
   "DatabaseConfigurations": {
-    "DatabasePath": "",
-    "DatabaseName": "",
-    "DocumentsPath": "",
-    //The script file will be always moved to solution bin directory as a common location
+    "DatabasePath": "D:\\Projects\\DoctoApp\\Data\\Code\\Data",
+    "DatabaseName": "Database.db",
+    "DocumentsPath": "D:\\Projects\\DoctoApp\\Data\\Code\\Data\\Documents",
     "DatabaseConfigFilePath": "Data\\SqlLiteScripts\\Database.sql"
   }
 }
