--- a/src/Clinic.Api/Clinic.Api.csproj
+++ b/src/Clinic.Api/Clinic.Api.csproj
@@ -1,14 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="QuestPDF" Version="2024.3.6" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        
+        
     </ItemGroup>
 
     <ItemGroup>
