--- a/src/Clinic.Api/appsettings.json
+++ b/src/Clinic.Api/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "DatabaseConfigurations": {
-    "DatabasePath": "D:\\Projects\\DoctoApp\\Data\\Code\\Data",
+    "DatabasePath": "C:\\Projects\\Data",
     "DatabaseName": "Database.db",
-    "DocumentsPath": "D:\\Projects\\DoctoApp\\Data\\Code\\Data\\Documents",
+    "DocumentsPath": "C:\\Projects\\Data\\Documents",
     "DatabaseConfigFilePath": "Data\\SqlLiteScripts\\Database.sql"
   }
 }
