--- a/src/Clinic.Core/Clinic.Core.csproj
+++ b/src/Clinic.Core/Clinic.Core.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Dapper" Version="2.0.123" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.0" />
+        <PackageReference Include="QuestPDF" Version="2024.3.6" />
     </ItemGroup>
 
     <ItemGroup>
